--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -107,3 +107,13 @@
     box-sizing: border-box;
     overflow-x: hidden;
   }
+
+  .footer-link-item {
+    color: inherit;
+    text-decoration: none;
+  }
+  
+  .footer-link-item:hover {
+    color: #10b981; /* on hover green highlight */
+  }
+  
